Fix autoplay video KOL on iphone

--- a/web/themes/custom/glico/css/front.css
+++ b/web/themes/custom/glico/css/front.css
@@ -3772,3 +3772,31 @@
     }
   }
 }
+
+/* Load video KOLs on Iphone */
+#video-modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+}
+
+#video-modal .video-wrapper {
+  position: absolute;
+  width: 100vw;
+  height: 56.25vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+}
+
+#video-modal .video-wrapper video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
